Ensure focus outlines are visible, click-on-enter for checkboxes

--- a/frontend/sass/laletterbuilder/_navbar-overrides.scss
+++ b/frontend/sass/laletterbuilder/_navbar-overrides.scss
@@ -66,6 +66,10 @@ nav.navbar {
   .navbar-link {
     color: $primary;
     height: 100%;
+
+    &:focus {
+      outline-color: $primary;
+    }
   }
 
   .navbar-link::after {
