--- a/frontend/sass/laletterbuilder/styles.scss
+++ b/frontend/sass/laletterbuilder/styles.scss
@@ -297,7 +297,7 @@ $jf-navbar-height: 70px;
 // CHOOSE LETTER STYLING OVERRIDES
 
 .jf-la-letter-card {
-  border: 0.063rem solid $justfix-black;
+  border: 0.063rem solid $primary;
   box-sizing: border-box;
   border-radius: 0.25rem;
   margin-left: auto;
